--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -10,6 +10,7 @@
 <project name="regxmllib" default="default" basedir=".">
     <description>Builds, tests, and runs the project RegXMLGenerator.</description>
     <import file="nbproject/build-impl.xml"/>
+    <property file="build.properties"></property>
 
     <target name="-post-init">
         <echo file="${src.dir}/repoversion.properties">version=</echo>
@@ -20,6 +21,25 @@
             <arg value="--pretty=format:%H"/>
         </exec>
     </target>
+
+<!--    <target name="apply-xsl" depends="jar">
+        <java classname="com.sandflow.smpte.tools.ApplyXSL">
+            <arg value="-x"/>
+            <arg value="../xsl/regxml-dict-to-xsd.xsl"/>
+            <arg value="-i"/>
+            <arg value="${regxml.dict}"/>
+            <arg value="-o"/>
+            <arg value="${regxml.schema}"/>
+            <classpath>
+                <pathelement location="${dist.jar}"/>
+            </classpath>
+        </java>
+    </target>-->
+    
+    <target name="build-regxml-schema" depends="build-regxml-dict">
+        <xslt style="../xsl/regxml-dict-to-xsd.xsl" in="${regxml.dict}" out="${regxml.schema}">
+        </xslt>
+    </target>
     
     <target name="build-xml-registers" depends="jar,build-register-schemas">
         <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
@@ -27,7 +47,7 @@
             <arg value="-i"/>
             <arg value="../register/input/elements-smpte-ra-frozen-20140304.2118.csv"/>
             <arg value="-o"/>
-            <arg value="../register/ElementsRegister.xml"/>
+            <arg value="${elements.register}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -37,7 +57,7 @@
             <arg value="-i"/>
             <arg value="../register/input/types-smpte-ra-frozen-20140304.2118.csv"/>
             <arg value="-o"/>
-            <arg value="../register/TypesRegister.xml"/>
+            <arg value="${types.register}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -47,7 +67,7 @@
             <arg value="-i"/>
             <arg value="../register/input/labels-smpte-ra-frozen-20140304.2118.csv"/>
             <arg value="-o"/>
-            <arg value="../register/LabelsRegister.xml"/>
+            <arg value="${labels.register}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -58,7 +78,7 @@
             <arg value="-i"/>
             <arg value="../register/input/groups-smpte-ra-frozen-20140304.2118.csv"/>
             <arg value="-o"/>
-            <arg value="../register/GroupsRegister.xml"/>
+            <arg value="${groups.register}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -71,14 +91,14 @@
     <target name="build-regxml-dict" depends="build-xml-registers">
         <java classname="com.sandflow.smpte.tools.XMLRegistersToDict">
             <arg value="-e"/>
-            <arg value="../register/ElementsRegister.xml"/>
+            <arg value="${elements.register}"/>
             <arg value="-l"/>
-            <arg value="../register/LabelsRegister.xml"/>
+            <arg value="${labels.register}"/>
             <arg value="-g"/>
-            <arg value="../register/GroupsRegister.xml"/>
+            <arg value="${groups.register}"/>
             <arg value="-t"/>
-            <arg value="../register/TypesRegister.xml"/>
-            <arg value="../dict/regxml.xml"/>
+            <arg value="${types.register}"/>
+            <arg value="${regxml.dict}"/>
 
             <classpath>
                 <pathelement location="${dist.jar}"/>
@@ -92,7 +112,7 @@
             <arg value="-cp"/>
             <arg value="com.sandflow.smpte.register.TypesRegister"/>
             <arg value="-d"/>
-            <arg value="../schemas"/>
+            <arg value="${register.schema.dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -102,7 +122,7 @@
             <arg value="-cp"/>
             <arg value="com.sandflow.smpte.register.LabelsRegister"/>
             <arg value="-d"/>
-            <arg value="../schemas"/>
+            <arg value="${register.schema.dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -112,7 +132,7 @@
             <arg value="-cp"/>
             <arg value="com.sandflow.smpte.register.ElementsRegister"/>
             <arg value="-d"/>
-            <arg value="../schemas"/>
+            <arg value="${register.schema.dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
@@ -122,7 +142,7 @@
             <arg value="-cp"/>
             <arg value="com.sandflow.smpte.register.GroupsRegister"/>
             <arg value="-d"/>
-            <arg value="../schemas"/>
+            <arg value="${register.schema.dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
