--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -3,8 +3,9 @@ types.register=${register.dir}/TypesRegister.xml
 labels.register=${register.dir}/LabelsRegister.xml
 groups.register=${register.dir}/GroupsRegister.xml
 register.dir=../register
-register.schema.dir=${register.dir}/schemas
-
+register.schema.dir=../schemas/register
+dict.schema.dir=../schemas/dict
+register.xls.input.dir=../input
 regxml.dict.dir=../dict
 regxml.dict=${regxml.dict.dir}/RegXML.xml
 regxml.schema=${regxml.dict.dir}/RegXML.xsd
