address Issues #19 and #20

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -5,8 +5,8 @@ groups.register=${register.dir}/GroupsRegister.xml
 register.dir=../register
 register.schema.dir=../schemas/register
 dict.schema.dir=../schemas/dict
-register.xls.input.dir=../input
-regxml.dict.dir=../dict
-regxml.dict=${regxml.dict.dir}/RegXML.xml
-regxml.schema=${regxml.dict.dir}/RegXML.xsd
+dict.dir=../dict
+register.xml.input.dir=../input/register/xml
+register.csv.input.dir=../input/register/csv
+
 
