- simplified register building in build.xml

--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -43,30 +43,16 @@
     
     <!-- Build XML Registers -->
     
-    <target name="check-if-xml-registers-exist">
-        <condition property="xml-registers-exist">
-            <and>
-                <available file="${register.xml.input.dir}/Elements.xml"/>
-                <available file="${register.xml.input.dir}/Groups.xml"/>
-                <available file="${register.xml.input.dir}/Types.xml"/>
-                <available file="${register.xml.input.dir}/Labels.xml"/>
-            </and>
-        </condition>
-    </target>
-
+    <target name="build-xml-registers" depends="build-xml-registers-from-csv,build-xml-registers-from-xml"/>
     
-    <target name="build-xml-registers" depends="check-if-xml-registers-exist,build-xml-registers-from-csv,build-xml-registers-from-xml"/>
-    
-    <target name="build-xml-registers-from-xml" depends="jar,check-if-xml-registers-exist" if="xml-registers-exist">
+    <target name="build-xml-registers-from-xml" depends="jar" unless="use-xls-registers">
         <copy file="${register.xml.input.dir}/Elements.xml" tofile="${elements.register}"/>
         <copy file="${register.xml.input.dir}/Groups.xml"  tofile="${groups.register}"/>
         <copy file="${register.xml.input.dir}/Types.xml"  tofile="${types.register}"/>
         <copy file="${register.xml.input.dir}/Labels.xml"  tofile="${labels.register}"/>
     </target>
-    
-    <target name="force-build-xml-registers-from-csv" depends="build-xml-registers-from-csv"/>
-    
-    <target name="build-xml-registers-from-csv" depends="jar" unless="xml-registers-exist">
+        
+    <target name="build-xml-registers-from-csv" depends="jar" if="use-xls-registers">
         <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
             <arg value="-element"/>
             <arg value="-i"/>
