--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -1,12 +1,11 @@
-elements.register=${register.dir}/ElementsRegister.xml
-types.register=${register.dir}/TypesRegister.xml
-labels.register=${register.dir}/LabelsRegister.xml
-groups.register=${register.dir}/GroupsRegister.xml
-register.dir=../register
-register.schema.dir=../schemas/register
-dict.schema.dir=../schemas/dict
-dict.dir=../dict
-register.xml.input.dir=../input/register/xml
-register.csv.input.dir=../input/register/csv
-
-
+register.dir=../input/xml-registers
+elements.register=${register.dir}/Elements.xml
+types.register=${register.dir}/Types.xml
+labels.register=${register.dir}/Labels.xml
+groups.register=${register.dir}/Groups.xml
+register.schema.dir=../output/register-schemas
+dict.schema.dir=../output/regxml-schemas
+dict.dir=../output/regxml-dicts
+dict.schema.common=src/resources/reg.xsd
+repoversion.dir=src/config
+repoversion.name=repoversion.properties
