--- a/regxmllib/nbproject/project.properties
+++ b/regxmllib/nbproject/project.properties
@@ -91,4 +91,4 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
-main.class=com.sandflow.smpte.register.importer.ExcelTypesRegister
+main.class=com.sandflow.smpte.tools.RegXMLDump
