--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -13,22 +13,28 @@
     <property file="build.properties"></property>
 
     <target name="-post-init">
-        <echo file="${src.dir}/repoversion.properties">version=</echo>
+		<mkdir dir="${repoversion.dir}"/>
+        <echo file="${repoversion.dir}/${repoversion.name}">version=</echo>
         <exec executable="git"
-              output="${src.dir}/repoversion.properties" append="true">
+              output="${repoversion.dir}/${repoversion.name}" append="true">
             <arg value="show"/>
             <arg value="-s"/>
             <arg value="--pretty=format:%H"/>
         </exec>
     </target>
     
-    <target name="build-regxml-schema" depends="build-regxml-dict">
+	<!--Generate RegXML XML Schemas -->
+
+	
+    <target name="build-regxml-schema" depends="build-regxml-dict,jar">
         
          <fileset dir="${dict.dir}" id="dicts">
             <include name="*.xml" />
         </fileset>
-        
-        <pathconvert property="dictpaths" refid="dicts" pathsep=" " />
+		
+		<copy file="${dict.schema.common}" todir="${dict.schema.dir}"/>
+		
+		<pathconvert property="dictpaths" refid="dicts" pathsep=" " />
         
          <java classname="com.sandflow.smpte.tools.GenerateDictionaryXMLSchema">
             <arg value="-d"/>
@@ -39,67 +45,13 @@
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
-    </target>
-    
-    <!-- Build XML Registers -->
-    
-    <target name="build-xml-registers" depends="build-xml-registers-from-csv,build-xml-registers-from-xml"/>
-    
-    <target name="build-xml-registers-from-xml" depends="jar" unless="use-xls-registers">
-        <copy file="${register.xml.input.dir}/Elements.xml" tofile="${elements.register}"/>
-        <copy file="${register.xml.input.dir}/Groups.xml"  tofile="${groups.register}"/>
-        <copy file="${register.xml.input.dir}/Types.xml"  tofile="${types.register}"/>
-        <copy file="${register.xml.input.dir}/Labels.xml"  tofile="${labels.register}"/>
+		
+		
     </target>
         
-    <target name="build-xml-registers-from-csv" depends="jar" if="use-xls-registers">
-        <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
-            <arg value="-element"/>
-            <arg value="-i"/>
-            <arg value="${register.csv.input.dir}/elements-smpte-ra-frozen-20140304.2118.csv"/>
-            <arg value="-o"/>
-            <arg value="${elements.register}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
-            <arg value="-type"/>
-            <arg value="-i"/>
-            <arg value="${register.csv.input.dir}/types-smpte-ra-frozen-20140304.2118.csv"/>
-            <arg value="-o"/>
-            <arg value="${types.register}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
-            <arg value="-label"/>
-            <arg value="-i"/>
-            <arg value="${register.csv.input.dir}/labels-smpte-ra-frozen-20140304.2118.csv"/>
-            <arg value="-o"/>
-            <arg value="${labels.register}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-       
-        <java classname="com.sandflow.smpte.tools.XLSRegistersToXML">
-            <arg value="-group"/>
-            <arg value="-i"/>
-            <arg value="${register.csv.input.dir}/groups-smpte-ra-frozen-20140304.2118.csv"/>
-            <arg value="-o"/>
-            <arg value="${groups.register}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-            
-    </target>
-    
-    <!--buid RegXML dictionary-->
+    <!--Generate RegXML dictionary-->
 
-    <target name="build-regxml-dict" depends="jar,build-xml-registers">
+    <target name="build-regxml-dict" depends="jar">
         
         <delete>
             <fileset dir="${dict.dir}" includes="*.xml"/>
@@ -122,7 +74,7 @@
         </java>
     </target>
     
-    
+        <!--Generate Register XML Schemas-->
     
         <target name="build-register-schemas" depends="jar">
         <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
