- closes #39 - closes #40 - misc cleanup and refactoring

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -6,6 +6,6 @@ groups.register=${register.dir}/Groups.xml
 register.schema.dir=../output/register-schemas
 dict.schema.dir=../output/regxml-schemas
 dict.dir=../output/regxml-dicts
-dict.schema.common=src/resources/reg.xsd
+dict.schemas.common=src/resources/reg.xsd
 repoversion.dir=src/config
 repoversion.name=repoversion.properties
