- closes #38 - miscellaneous refactoring

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -7,5 +7,11 @@ register.schema.dir=../output/register-schemas
 dict.schema.dir=../output/regxml-schemas
 dict.dir=../output/regxml-dicts
 dict.schemas.common=src/resources/reg.xsd
+samples.dir=src/test/resources/sample-files
+video1.sample=${samples.dir}/video1.mxf
+audio1.sample=${samples.dir}/audio1.mxf
+ref.files.dir=src/test/resources/reference-files
+video1.ref.file=${ref.files.dir}/video1.xml
+audio1.ref.file=${ref.files.dir}/audio1.xml
 repoversion.dir=src/config
 repoversion.name=repoversion.properties
