--- a/regxmllib/nbproject/project.properties
+++ b/regxmllib/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.JAXB-ENDORSED.classpath}
 excludes=
+file.reference.src-test=src/test
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -40,11 +41,13 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit.classpath}:\
+    ${file.reference.src-test}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -87,8 +90,9 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.src-test}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.java.dir=src\\main\\java
 main.class=com.sandflow.smpte.tools.RegXMLDump
+test.java.dir=src\\test\\java
