--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -75,7 +75,7 @@
     
         <!--Generate Register XML Schemas-->
     
-        <target name="build-register-schemas" depends="jar">
+    <target name="build-register-schemas" depends="jar">
         <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
             <arg value="com.sandflow.smpte.register.TypesRegister"/>
@@ -117,7 +117,38 @@
         </java>
     </target>
     
-    
+        <!--Generate Reference Test Files-->
+
+    <target name="build-reference-test-files" depends="build-regxml-dict,jar">
+        
+        <fileset dir="${dict.dir}" id="dicts">
+            <include name="*.xml" />
+        </fileset>
+        
+        <pathconvert property="dictpaths" refid="dicts" pathsep=" " />
+        
+        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${video1.ref.file}">
+            <arg value="-all"/>
+            <arg value="-d"/>
+            <arg line="${dictpaths}"/>
+            <arg value="-i"/>
+            <arg value="${video1.sample}"/>
+            <classpath>
+                <pathelement location="${dist.jar}"/>
+            </classpath>
+        </java>
+        
+        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${audio1.ref.file}">
+            <arg value="-all"/>
+            <arg value="-d"/>
+            <arg line="${dictpaths}"/>
+            <arg value="-i"/>
+            <arg value="${audio1.sample}"/>
+            <classpath>
+                <pathelement location="${dist.jar}"/>
+            </classpath>
+        </java>
+    </target>
 
     <!--
 
