- adopt maven-type repo structure

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -6,12 +6,14 @@ groups.register=${register.dir}/Groups.xml
 register.schema.dir=../output/register-schemas
 dict.schema.dir=../output/regxml-schemas
 dict.dir=../output/regxml-dicts
-dict.schemas.common=src/resources/reg.xsd
+dict.schemas.common=${main.resources.dir}/reg.xsd
 samples.dir=src/test/resources/sample-files
 video1.sample=${samples.dir}/video1.mxf
 audio1.sample=${samples.dir}/audio1.mxf
 ref.files.dir=src/test/resources/reference-files
 video1.ref.file=${ref.files.dir}/video1.xml
 audio1.ref.file=${ref.files.dir}/audio1.xml
-repoversion.dir=src/config
+main.config.dir=src/main/config
+main.resources.dir=src/main/resources
+repoversion.dir=${main.config.dir}
 repoversion.name=repoversion.properties
