--- a/regxmllib/nbproject/project.properties
+++ b/regxmllib/nbproject/project.properties
@@ -37,7 +37,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
@@ -46,8 +46,7 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${file.reference.src-test}
+    ${libs.junit.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -93,6 +92,6 @@ run.test.classpath=\
     ${build.test.classes.dir}:\
     ${file.reference.src-test}
 source.encoding=UTF-8
-src.java.dir=src\\main\\java
 main.class=com.sandflow.smpte.tools.RegXMLDump
+src.java.dir=src\\main\\java
 test.java.dir=src\\test\\java
