--- a/regxmllib/nbproject/project.properties
+++ b/regxmllib/nbproject/project.properties
@@ -41,8 +41,8 @@ javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -78,7 +78,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_1.7
 project.license=bsd
 run.classpath=\
     ${javac.classpath}:\
