--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -7,11 +7,14 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="regxmllib" default="default" basedir=".">
-    <description>Builds, tests, and runs the project RegXMLGenerator.</description>
+<project name="regxmllib" default="default" basedir="." xmlns:artifact="antlib:org.apache.maven.artifact.ant">
+    
+    <description>Build scripts for regxmllib</description>
+    
     <import file="nbproject/build-impl.xml"/>
-    <property file="build.properties"></property>
-
+    
+    <property file="build.properties"/>
+    
     <target name="-post-init">
 		<mkdir dir="${repoversion.dir}"/>
         <echo file="${repoversion.dir}/${repoversion.name}">version=</echo>
@@ -193,6 +196,98 @@
             </classpath>
         </java>
     </target>
+
+    <!-- generate distribution, including java doc and sources -->
+    
+    <target name="maven-build" depends="jar,-javadoc-build">
+        
+        <property name="maven.pom.file" value="pom.xml" />
+        
+        <artifact:pom id="maven.pom" file="${maven.pom.file}" />
+
+        <property name="maven.dist.jar" value="${dist.dir}/${maven.pom.artifactId}-${maven.pom.version}.jar" />
+        <property name="maven.javadoc.jar" value="${dist.dir}/${maven.pom.artifactId}-${maven.pom.version}-javadoc.jar" />
+        <property name="maven.sources.jar" value="${dist.dir}/${maven.pom.artifactId}-${maven.pom.version}-sources.jar" />
+                
+        <!-- create the jar -->
+            
+        <copyfile src="${dist.jar}" dest="${maven.dist.jar}" />
+      
+        <!-- build the javadoc jar -->
+        
+        <jar jarfile="${maven.javadoc.jar}">
+            <fileset dir="${dist.javadoc.dir}" />
+        </jar>
+
+        <!-- build the sources jar -->
+        
+        <jar jarfile="${maven.sources.jar}">
+            <fileset dir="${src.java.dir}" />
+        </jar>
+        
+    </target>
+    
+    <!-- deploy SNAPSHOT to OSSRH -->
+    
+    <property name="ossrh-snapshots-repository-url" value="https://oss.sonatype.org/content/repositories/snapshots/" />
+    <property name="ossrh-staging-repository-url" value="https://oss.sonatype.org/service/local/staging/deploy/maven2/" />
+    <property name="ossrh-server-id" value="ossrh" />
+  
+    <target name="maven-deploy" depends="maven-build">
+        <artifact:mvn fork="true">
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${ossrh-snapshots-repository-url}" />
+            <arg value="-DrepositoryId=${ossrh-server-id}" />
+            <arg value="-DpomFile=${maven.pom.file}" />
+            <arg value="-Dfile=${maven.dist.jar}" />
+        </artifact:mvn>
+    </target>
+    
+    <!-- stage release to OSSRH -->
+
+    <target name="maven-stage" depends="maven-build">
+        
+        <!-- make sure this is not a snapshot -->
+        
+        <fail message="Cannot deploy SNAPSHOT, please update the POM">
+            <condition>
+                <contains string="${maven.pom.version}" substring="SNAPSHOT"/>
+            </condition>
+        </fail>
+        
+        <!-- sign and deploy the main artifact -->
+        <artifact:mvn fork="true">
+            <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+            <arg value="-Durl=${ossrh-staging-repository-url}" />
+            <arg value="-DrepositoryId=${ossrh-server-id}" />
+            <arg value="-DpomFile=${maven.pom.file}" />
+            <arg value="-Dfile=${maven.dist.jar}" />
+            <arg value="-Pgpg" />
+        </artifact:mvn>
+
+        <!-- sign and deploy the sources artifact -->
+        <artifact:mvn fork="true">
+            <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+            <arg value="-Durl=${ossrh-staging-repository-url}" />
+            <arg value="-DrepositoryId=${ossrh-server-id}" />
+            <arg value="-DpomFile=${maven.pom.file}" />
+            <arg value="-Dfile=${maven.sources.jar}" />
+            <arg value="-Dclassifier=sources" />
+            <arg value="-Pgpg" />
+        </artifact:mvn>
+
+        <!-- sign and deploy the javadoc artifact -->
+        <artifact:mvn fork="true">
+            <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+            <arg value="-Durl=${ossrh-staging-repository-url}" />
+            <arg value="-DrepositoryId=${ossrh-server-id}" />
+            <arg value="-DpomFile=${maven.pom.file}" />
+            <arg value="-Dfile=${maven.javadoc.jar}" />
+            <arg value="-Dclassifier=javadoc" />
+            <arg value="-Pgpg" />
+        </artifact:mvn>
+    </target>
+
 
     <!--
 
