--- a/regxmllib/pom.xml
+++ b/regxmllib/pom.xml
@@ -4,12 +4,13 @@
  
     <groupId>com.sandflow</groupId>
     <artifactId>regxmllib</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
  
     <name>regxmllib</name>
     <url>https://github.com/sandflow/regxmllib</url>
-  
+    <description>Tools and libraries for the creation of RegXML (SMPTE ST 2001-1) representations of MXF header metadata (SMPTE ST 377-1).</description>
+
     <licenses>
         <license>
             <name>BSD 2-clause "Simplified" License</name>
