Adds support for little-endian byte order parsing. Adds unit test file for indirect type. Adds support for IDAUs.

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -12,11 +12,13 @@ video1.sample=${samples.dir}/video1.mxf
 audio1.sample=${samples.dir}/audio1.mxf
 video2.sample=${samples.dir}/video2.mxf
 audio2.sample=${samples.dir}/audio2.mxf
+indirect.sample=${samples.dir}/indirect.mxf
 ref.files.dir=src/test/resources/reference-files
 video1.ref.file=${ref.files.dir}/video1.xml
 audio1.ref.file=${ref.files.dir}/audio1.xml
 video2.ref.file=${ref.files.dir}/video2.xml
 audio2.ref.file=${ref.files.dir}/audio2.xml
+indirect.ref.file=${ref.files.dir}/indirect.xml
 main.config.dir=src/main/config
 main.resources.dir=src/main/resources
 repoversion.dir=${main.config.dir}
