--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -142,6 +142,7 @@
                     <available file="${audio1.ref.file}"/>
                     <available file="${video2.ref.file}"/>
                     <available file="${audio2.ref.file}"/>
+                    <available file="${indirect.ref.file}"/>
                 </or>
             </condition>
         </fail>
@@ -191,6 +192,17 @@
             <arg line="${dictpaths}"/>
             <arg value="-i"/>
             <arg value="${audio2.sample}"/>
+            <classpath>
+                <pathelement location="${dist.jar}"/>
+            </classpath>
+        </java>
+        
+        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${indirect.ref.file}" logError="true">
+            <arg value="-all"/>
+            <arg value="-d"/>
+            <arg line="${dictpaths}"/>
+            <arg value="-i"/>
+            <arg value="${indirect.sample}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
