--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -13,12 +13,14 @@ audio1.sample=${samples.dir}/audio1.mxf
 video2.sample=${samples.dir}/video2.mxf
 audio2.sample=${samples.dir}/audio2.mxf
 indirect.sample=${samples.dir}/indirect.mxf
+utf8.sample=${samples.dir}/utf8_embedded_text.mxf
 ref.files.dir=src/test/resources/reference-files
 video1.ref.file=${ref.files.dir}/video1.xml
 audio1.ref.file=${ref.files.dir}/audio1.xml
 video2.ref.file=${ref.files.dir}/video2.xml
 audio2.ref.file=${ref.files.dir}/audio2.xml
 indirect.ref.file=${ref.files.dir}/indirect.xml
+utf8.ref.file=${ref.files.dir}/utf8_embedded_text.xml
 main.config.dir=src/main/config
 main.resources.dir=src/main/resources
 repoversion.dir=${main.config.dir}
