Reference files now build from reference registers. Regenerated reference test files.

--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -21,6 +21,11 @@ video2.ref.file=${ref.files.dir}/video2.xml
 audio2.ref.file=${ref.files.dir}/audio2.xml
 indirect.ref.file=${ref.files.dir}/indirect.xml
 utf8.ref.file=${ref.files.dir}/utf8_embedded_text.xml
+ref.regs.dir=src/test/resources/reference-registers
+ref.elements.register=${ref.regs.dir}/Elements.xml
+ref.types.register=${ref.regs.dir}/Types.xml
+ref.labels.register=${ref.regs.dir}/Labels.xml
+ref.groups.register=${ref.regs.dir}/Groups.xml
 main.config.dir=src/main/config
 main.resources.dir=src/main/resources
 repoversion.dir=${main.config.dir}
