--- a/regxmllib/build.properties
+++ b/regxmllib/build.properties
@@ -6,27 +6,8 @@ groups.register=${register.dir}/Groups.xml
 register.schema.dir=../output/register-schemas
 dict.schema.dir=../output/regxml-schemas
 dict.dir=../output/regxml-dicts
-dict.schemas.common=${main.resources.dir}/reg.xsd
-samples.dir=src/test/resources/sample-files
-video1.sample=${samples.dir}/video1.mxf
-audio1.sample=${samples.dir}/audio1.mxf
-video2.sample=${samples.dir}/video2.mxf
-audio2.sample=${samples.dir}/audio2.mxf
-indirect.sample=${samples.dir}/indirect.mxf
-utf8.sample=${samples.dir}/utf8_embedded_text.mxf
-ref.files.dir=src/test/resources/reference-files
-video1.ref.file=${ref.files.dir}/video1.xml
-audio1.ref.file=${ref.files.dir}/audio1.xml
-video2.ref.file=${ref.files.dir}/video2.xml
-audio2.ref.file=${ref.files.dir}/audio2.xml
-indirect.ref.file=${ref.files.dir}/indirect.xml
-utf8.ref.file=${ref.files.dir}/utf8_embedded_text.xml
-ref.regs.dir=src/test/resources/reference-registers
-ref.elements.register=${ref.regs.dir}/Elements.xml
-ref.types.register=${ref.regs.dir}/Types.xml
-ref.labels.register=${ref.regs.dir}/Labels.xml
-ref.groups.register=${ref.regs.dir}/Groups.xml
 main.config.dir=src/main/config
 main.resources.dir=src/main/resources
+test.resources.dir=src/test/resources
 repoversion.dir=${main.config.dir}
 repoversion.name=repoversion.properties
