--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -42,11 +42,15 @@
 
     <target name="build-regxml-schema" depends="build-regxml-dict,jar">
         
-         <fileset dir="${dict.dir}" id="dicts">
+        <delete>
+            <fileset dir="${dict.schema.dir}" includes="*.xsd"/>
+        </delete>
+
+        <fileset dir="${dict.dir}" id="dicts">
             <include name="*.xml" />
         </fileset>
 		
-	<copy file="${dict.schemas.common}" todir="${dict.schema.dir}"/>
+	<copy file="${main.resources.dir}/reg.xsd" todir="${dict.schema.dir}"/>
 		
 	<pathconvert property="dictpaths" refid="dicts" pathsep=" " />
         
@@ -87,78 +91,97 @@
         </java>
     </target>
     
-        <!--Generate Register XML Schemas-->
-    
+    <!--Generate Register XML Schemas-->
+        
     <target name="build-register-schemas" depends="jar">
+                
+        <property name="catsup_xsd_dir" value="${register.schema.dir}/catsup"/>
+            
+        <mkdir dir="${catsup_xsd_dir}"/>
+    
+        <delete>
+            <fileset dir="${catsup_xsd_dir}" includes="*.xsd"/>
+        </delete>
+        
         <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
-            <arg value="com.sandflow.smpte.register.model2015.TypesRegisterModel"/>
+            <arg value="com.sandflow.smpte.register.catsup.TypesRegisterModel"/>
             <arg value="-d"/>
-            <arg value="${register.schema.dir}"/>
+            <arg value="${catsup_xsd_dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
         
-                <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
+        <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
-            <arg value="com.sandflow.smpte.register.model2015.LabelsRegisterModel"/>
+            <arg value="com.sandflow.smpte.register.catsup.LabelsRegisterModel"/>
             <arg value="-d"/>
-            <arg value="${register.schema.dir}"/>
+            <arg value="${catsup_xsd_dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
         
-                <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
+        <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
-            <arg value="com.sandflow.smpte.register.model2015.ElementsRegisterModel"/>
+            <arg value="com.sandflow.smpte.register.catsup.ElementsRegisterModel"/>
             <arg value="-d"/>
-            <arg value="${register.schema.dir}"/>
+            <arg value="${catsup_xsd_dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
         
-                <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
+        <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
-            <arg value="com.sandflow.smpte.register.model2015.GroupsRegisterModel"/>
+            <arg value="com.sandflow.smpte.register.catsup.GroupsRegisterModel"/>
             <arg value="-d"/>
-            <arg value="${register.schema.dir}"/>
+            <arg value="${catsup_xsd_dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
+        
+        <property name="brown_sauce_xsd_dir" value="${register.schema.dir}/brown_sauce"/>
+            
+        <mkdir dir="${brown_sauce_xsd_dir}"/>
+    
+        <delete>
+            <fileset dir="${brown_sauce_xsd_dir}" includes="*.xsd"/>
+        </delete>
+        
+        <mkdir dir="${brown_sauce_xsd_dir}"/>
         
          <java classname="com.sandflow.smpte.tools.GenerateXMLSchemaDocuments">
             <arg value="-cp"/>
-            <arg value="com.sandflow.smpte.register.model2016.GroupsRegisterModel"/>
+            <arg value="com.sandflow.smpte.register.brown_sauce.GroupsRegisterModel"/>
             <arg value="-d"/>
-            <arg value="${register.schema.dir}"/>
+            <arg value="${brown_sauce_xsd_dir}"/>
             <classpath>
                 <pathelement location="${dist.jar}"/>
             </classpath>
         </java>
     </target>
     
-        <!--Generate Reference Test Files-->
+    <!--Generate Reference Test Files-->
 
     <target name="build-reference-test-files" depends="build-regxml-dict,jar">
         
+        <property name="samples.dir" value="${test.resources.dir}/sample-files"/>
+        <property name="ref.files.dir" value="${test.resources.dir}/reference-files"/>
+        
         <fail message="Reference files present already. Delete manually.">
             <condition>
-                <or>
-                    <available file="${video1.ref.file}"/>
-                    <available file="${audio1.ref.file}"/>
-                    <available file="${video2.ref.file}"/>
-                    <available file="${audio2.ref.file}"/>
-                    <available file="${indirect.ref.file}"/>
-                    <available file="${utf8.ref.file}"/>
-                </or>
+                <resourcecount when="greater" count="0">
+                    <fileset dir="${ref.files.dir}" includes="*"/>
+                </resourcecount>
             </condition>
         </fail>
         
         <!-- Generate temporary dictionaries from the reference registers -->
+
+        <property name="ref.regs.dir" value="${test.resources.dir}/registers/catsup"/>
         
         <tempfile property="dict.temp.dir" destDir="${java.io.tmpdir}"/>
         
@@ -166,13 +189,13 @@
         
         <java classname="com.sandflow.smpte.tools.XMLRegistersToDict">
             <arg value="-e"/>
-            <arg value="${ref.elements.register}"/>
+            <arg value="${ref.regs.dir}/Elements.xml"/>
             <arg value="-l"/>
-            <arg value="${ref.labels.register}"/>
+            <arg value="${ref.regs.dir}/Labels.xml"/>
             <arg value="-g"/>
-            <arg value="${ref.groups.register}"/>
+            <arg value="${ref.regs.dir}/Groups.xml"/>
             <arg value="-t"/>
-            <arg value="${ref.types.register}"/>
+            <arg value="${ref.regs.dir}/Types.xml"/>
             <arg value="${dict.temp.dir}"/>
 
             <classpath>
@@ -181,78 +204,35 @@
         </java>
         
         <!-- create the reference files -->
-        
+
         <fileset dir="${dict.temp.dir}" id="dicts">
             <include name="*.xml" />
         </fileset>
         
         <pathconvert property="dictpaths" refid="dicts" pathsep=" " />
         
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${video1.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${video1.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
+        <macrodef name="genreffile">
+            <attribute name="samplename"/>
+            <sequential>
+                <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${ref.files.dir}/@{samplename}.xml" logError="true">
+                    <arg value="-all"/>
+                    <arg value="-d"/>
+                    <arg line="${dictpaths}"/>
+                    <arg value="-i"/>
+                    <arg value="${samples.dir}/@{samplename}.mxf"/>
+                    <classpath>
+                        <pathelement location="${dist.jar}"/>
+                    </classpath>
+                </java>
+            </sequential>
+        </macrodef>
         
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${audio1.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${audio1.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${video2.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${video2.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${audio2.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${audio2.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${indirect.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${indirect.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
-        
-        <java classname="com.sandflow.smpte.tools.RegXMLDump" output="${utf8.ref.file}" logError="true">
-            <arg value="-all"/>
-            <arg value="-d"/>
-            <arg line="${dictpaths}"/>
-            <arg value="-i"/>
-            <arg value="${utf8.sample}"/>
-            <classpath>
-                <pathelement location="${dist.jar}"/>
-            </classpath>
-        </java>
+        <genreffile samplename="video1"/>
+        <genreffile samplename="audio1"/>
+        <genreffile samplename="video2"/>
+        <genreffile samplename="audio2"/>
+        <genreffile samplename="indirect"/>
+        <genreffile samplename="utf8_embedded_text"/>
         
         <!-- Delete the temp dir -->
         
