--- a/regxmllib/pom.xml
+++ b/regxmllib/pom.xml
@@ -4,7 +4,7 @@
  
     <groupId>com.sandflow</groupId>
     <artifactId>regxmllib</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
  
     <name>regxmllib</name>
