--- a/regxmllib/pom.xml
+++ b/regxmllib/pom.xml
@@ -6,7 +6,30 @@
     <artifactId>regxmllib</artifactId>
     <version>1.1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
- 
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>mywebapp</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <name>regxmllib</name>
     <url>https://github.com/sandflow/regxmllib</url>
     <description>Tools and libraries for the creation of RegXML (SMPTE ST 2001-1) representations of MXF header metadata (SMPTE ST 377-1).</description>
