Changed CMakeList.txt to
1) Create a shared library instead of a static library
2) Created an install target for the shared library
3) Created install targets for the header files to be installed in /include/
4) Created install target for the regxmllib/regxmllib/src/main/resources directory in /res

--- a/regxmllib/CMakeLists.txt
+++ b/regxmllib/CMakeLists.txt
@@ -9,7 +9,8 @@ include_directories( ${XercesC_INCLUDE_DIR}
 
 
 file(GLOB_RECURSE SRC_FILES src/main/cpp/*.cpp src/main/cpp/*.h )
-add_library(${PROJECT_NAME} ${SRC_FILES})
+add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 98)
 
 
@@ -44,3 +45,17 @@ endforeach( UNIT_TEST_PATH ${UNIT_TESTS} )
 #add_executable(AUIDTest src/test/cpp/com/sandflow/smpte/util/AUIDTest.cpp)
 #target_link_libraries(AUIDTest regxmllibc)
 #add_test(AUIDTest AUIDTest)
+
+file( GLOB_RECURSE HEADER_FILE_LIST ${CMAKE_SOURCE_DIR}/src/main/cpp/com/*.h )
+foreach(HEADER_FILE_PATH ${HEADER_FILE_LIST} )
+    file(RELATIVE_PATH relative_header_path ${CMAKE_SOURCE_DIR}/src/main/cpp/ ${HEADER_FILE_PATH})
+    get_filename_component(relative_path ${relative_header_path} DIRECTORY)
+    install(FILES ${HEADER_FILE_PATH} DESTINATION include/${relative_path})
+endforeach(HEADER_FILE_PATH ${HEADER_FILE_LIST} )
+
+file( GLOB_RECURSE SRC_RESOURCE_LIST ${CMAKE_SOURCE_DIR}/src/main/resources/*)
+foreach(SRC_RESOURCE_PATH ${SRC_RESOURCE_LIST} )
+    file(RELATIVE_PATH relative_src_res_path ${CMAKE_SOURCE_DIR}/.. ${SRC_RESOURCE_PATH})
+    get_filename_component(relative_path ${relative_src_res_path} DIRECTORY)
+    install(FILES ${SRC_RESOURCE_PATH} DESTINATION res/${relative_path})
+endforeach(SRC_RESOURCE_PATH ${SRC_RESOURCE_LIST} )
